# 11-job-application-assistant

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  GEMINI.md  GPT.md  README.md  agent_preferences.md  apply.sh  apply_claude.sh  apply_codex.sh  batch_apply.sh  parallel_apply.sh  parallel_apply_claude.sh  parallel_apply_codex.sh  pyproject.toml  update_resume.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  (+2 more)
docs/: INDEX.md  PLAN_TEMPLATE.md  QUALITY_SCORE.md  autofill-patterns.md  backlog-sweep.md  board-architecture.md  cli-reference.md  core-beliefs.md  cover-letter-generation.md  harness-governance.md  launch-modes.md  macos-app.md  operational-rules.md  output-structure.md  provider-setup.md  resume-generation.md  shared-inputs.md  worker-pipeline-patterns.md
governance/: runtime-policy.json
scripts/: analyze_dbfiddle.py  answer_generation_support.py  answer_refresh_state.py  answer_state_sync.py  answer_verification_backfill.py  answer_verification_state.py  answer_verifier.py  app_paths.py  application_models.py  application_submit_common.py  asset_pipeline_state.py  autofill_ashby.py  autofill_avature.py  autofill_bamboohr.py  autofill_breezy.py  autofill_bytedance.py  autofill_comeet.py  autofill_common.py  autofill_dover.py  autofill_eightfold.py  autofill_email.py  autofill_gem.py  autofill_greenhouse.py  autofill_icims.py  autofill_jazzhr.py  autofill_jobvite.py  autofill_lever.py  autofill_linkedin.py  autofill_motionrecruitment.py  autofill_paycor.py  autofill_phenom.py  autofill_pipeline.py  autofill_recruitee.py  autofill_reducto.py  autofill_rippling.py  autofill_smartrecruiters.py  autofill_successfactors.py  autofill_uber.py  autofill_workable.py  autofill_workday.py  (+105 more)
tests/: conftest.py  test_answer_refresh_state.py  test_answer_state_sync.py  test_answer_verification_backfill.py  test_answer_verification_state.py  test_answer_verifier.py  test_app_paths.py  test_application_submit_common.py  test_application_submit_common_path_suffix.py  test_ashby_autofill.py  test_asset_pipeline_state.py  test_autofill_bytedance.py  test_autofill_comeet.py  test_autofill_common.py  test_autofill_icims.py  test_autofill_linkedin.py  test_autofill_phenom.py  test_autofill_pipeline.py  test_autofill_smartrecruiters.py  test_autofill_uber.py  test_autofill_workday.py  test_avature_autofill.py  test_backlog_sweep_harness.py  test_backlog_sweep_recorder.py  test_breezy_autofill.py  test_browser_runtime.py  test_build_draft_summary.py  test_build_mac_app.py  test_build_mac_dmg.py  test_candidate_runtime.py  test_check_agent_docs.py  test_check_architecture.py  test_check_backlog_sweep.py  test_ci_workflow.py  test_codex_pr_workflow.py  test_compact_resume_content.py  test_company_detection.py  test_db_fiddle_adapter.py  test_dover_autofill.py  test_draft_manager.py  (+69 more)
(+174 files in other folders)
